Updated Offer Page W/ Coaching Incentive

--- a/client/index.html
+++ b/client/index.html
@@ -663,7 +663,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
         <span class="separator">|</span>
         <a href="pages/contact-us.html">Contact Us</a>
       </div>
-      <div class="social-icons">
+      <!-- <div class="social-icons">
         <a href="https://www.instagram.com/raising_the_bar_app/?hl=en" target="_blank" aria-label="Instagram">
           <picture>
             <source srcset="../assets/instagram-icon.webp" type="image/webp">
@@ -686,7 +686,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
             <img src="../assets/tiktok-icon.png" alt="TikTok" width="24" height="24" loading="lazy" decoding="async">
           </picture>
         </a>
-      </div>
+      </div> -->
     </div>
   </footer>
   <script>
