--- a/client/pages/contact-us.html
+++ b/client/pages/contact-us.html
@@ -61,7 +61,7 @@
         <span class="separator">|</span>
         <a href="contact-us.html">Contact Us</a>
       </div>
-      <div class="social-icons">
+      <!-- <div class="social-icons">
         <a href="https://www.instagram.com/raising_the_bar_app/?hl=en" target="_blank" aria-label="Instagram">
           <img src="../assets/instagram-icon.png" alt="Instagram">
         </a>
@@ -71,7 +71,7 @@
         <a href="https://www.tiktok.com/@raising_the_bar_app" target="_blank" aria-label="TikTok">
           <img src="../assets/tiktok-icon.png" alt="TikTok">
         </a>
-      </div>
+      </div> -->
     </div>
   </footer>
 </body>
