--- a/client/pages/tos.html
+++ b/client/pages/tos.html
@@ -191,14 +191,14 @@
         <span class="separator">|</span>
         <a href="contact-us.html">Contact Us</a>
       </div>
-      <div class="social-icons">
+      <!-- <div class="social-icons">
         <a href="https://www.instagram.com/raising_the_bar_app" target="_blank" aria-label="Instagram"><img
             src="../assets/instagram-icon.png" alt="Instagram"></a>
         <a href="https://www.youtube.com/@Raising_The_Bar_App" target="_blank" aria-label="YouTube"><img
             src="../assets/youtube-icon.png" alt="YouTube"></a>
         <a href="https://www.tiktok.com/@raising_the_bar_app" target="_blank" aria-label="TikTok"><img
             src="../assets/tiktok-icon.png" alt="TikTok"></a>
-      </div>
+      </div> -->
     </div>
   </footer>
 </body>
