--- a/client/pages/log-in-dashboard.html
+++ b/client/pages/log-in-dashboard.html
@@ -107,7 +107,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
         <span class="separator">|</span>
         <a href="contact-us.html">Contact Us</a>
       </div>
-      <div class="social-icons">
+      <!-- <div class="social-icons">
         <a href="https://www.instagram.com/raising_the_bar_app/?hl=en" target="_blank" aria-label="Instagram">
           <img src="../assets/instagram-icon.png" alt="Instagram">
         </a>
@@ -117,7 +117,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
         <a href="https://www.tiktok.com/@raising_the_bar_app" target="_blank" aria-label="TikTok">
           <img src="../assets/tiktok-icon.png" alt="TikTok">
         </a>
-      </div>
+      </div> -->
     </div>
   </footer>
   <script type="module" src="../scripts/log-in-dashboard.js"></script>
