--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -215,6 +215,9 @@
         <div class="wi2-item pt-item" data-index="3">
           <h4><span class="tick pt-tick">✔</span> Progress tracking and analysis</h4>
         </div>
+        <div class="wi2-item pt-item" data-index="4">
+          <h4><span class="tick pt-tick">✔</span> Online <br> 1-On-1 Coaching</h4>
+        </div>
         <!-- <div class="wi2-item pt-item" data-index="4">
           <h4><span class="tick pt-tick">✔</span> Flexible Logging</h4>
         </div>
@@ -345,9 +348,9 @@
       Complete Workout Program
     </h2>
     <ul class="workout-benefits">
-      <li>Workouts that adapt to your performance and evolve with you</li>
-      <li>Macro-matched meals — precision without the logging stress</li>
-      <li>Coach-style insights that track your habits, progress, and consistency</li>
+      <li>Workouts that adapt based on your performance and feedback</li>
+      <li>Meals that match your routine and fit around your lifestyle</li>
+      <li>1-on-1 online coaching with your assigned coach for expert guidance</li>
     </ul>
   </div>
 
@@ -424,17 +427,18 @@
       <strong>We use what you track to adapt workouts & meals</strong> so you
       <strong>get fit faster</strong>.<br> -->
 
-      <a href="#" id="comparePlansLink" class="compare-pill">
+      <!-- <a href="#" id="comparePlansLink" class="compare-pill">
         🔎 See how it compares
-      </a>
+      </a> -->
     </p>
 
     <!-- Promo applied strip -->
     <div id="promoAppliedStrip" class="rtb-ps" hidden>
       <div class="ps-top">
         <div class="discount-badge">
-          100% OFF
-          <!-- <span class="badge-subline">+ FREE SHIPPING</span> -->
+          <span class="discount-badge__main">100% OFF</span>
+          <span class="discount-badge__bonus">+ Free 1-on-1<br> Coach Call</span>
+          <!-- <span class="discount-badge__bonus">+ FREE SHIPPING</span> -->
         </div>
         <h4 class="ps-title">Promo code applied!</h4>
       </div>
@@ -564,8 +568,8 @@
           <h4>Your Complete Fitness Solution</h4>
           <ul class="offer-includes">
             <li>🏋️<Strong> Workouts that adapt</Strong> based on your performance and feedback</li>
-            <li>🍽️ <Strong>Meals that match your routine</Strong> and update as you go</li>
-            <li>📈 <Strong>Progress tools that respond to your effort</Strong> and keep you moving forward
+            <li>🍽️ <Strong>Meals that match your routine</Strong> and fit around your lifestyle</li>
+            📈 <strong>1-on-1 online coaching</strong> with your assigned coach for expert guidance
             </li>
           </ul>
         </div>
@@ -648,16 +652,15 @@
         Try the 12-Week Plan risk-free. No long-term commitment, no hidden fees.
       </p>
 
-<p class="offer-disclaimer">
-  By proceeding, you confirm that you’ve read and agree to our
-  <a href="tos.html" target="_blank">terms of service</a> and
-  <a href="refund-policy.html" target="_blank">refund policy</a>.
-  Your free trial lasts for 1 day, then renews every 30 days at
-  <span class="renew-amt"></span>/month unless cancelled.
-  You may also be offered an optional bonus after checkout, which
-  adds extra features for a one-time charge of £14.99.
-  Cancellations take effect at the end of your current 30-day period.
-</p>
+      <p class="offer-disclaimer">
+        By continuing, you agree to our
+        <a href="tos.html" target="_blank">terms</a> and
+        <a href="refund-policy.html" target="_blank">refund policy</a>.
+        The 1-day free trial renews every 30 days at
+        <span class="renew-amt"></span>/month unless cancelled.
+        One-time bonus (£9.99) shown after checkout.
+        Cancellations take effect at the end of your 30-day period.
+      </p>
 
 
   </section>
@@ -918,7 +921,7 @@ body: JSON.stringify(payload)
         <span class="separator">|</span>
         <a href="contact-us.html">Contact Us</a>
       </div>
-      <div class="social-icons">
+      <!-- <div class="social-icons">
         <a href="https://www.instagram.com/raising_the_bar_app/?hl=en" target="_blank" aria-label="Instagram">
           <img src="../assets/instagram-icon.png" alt="Instagram">
         </a>
@@ -928,7 +931,7 @@ body: JSON.stringify(payload)
         <a href="https://www.youtube.com/@Raising_The_Bar_App" target="_blank" aria-label="TikTok">
           <img src="../assets/tiktok-icon.png" alt="TikTok">
         </a>
-      </div>
+      </div> -->
     </div>
   </footer>
   <div id="compareModal" class="modal">
@@ -1029,7 +1032,10 @@ body: JSON.stringify(payload)
         <div class="scratch-card" role="group" aria-label="Scratch to reveal your discount">
           <div class="scratch-reveal">
             <div class="reveal-content">
-              <div class="discount-badge">100% OFF</div>
+              <div class="discount-badge">
+                <span class="discount-badge__main">100% OFF</span>
+                <span class="discount-badge__bonus">+ Free 1-on-1 Coach Call</span>
+              </div>
               <!-- <p class="reveal-sub">Your 12-Week Plan is free!</p> -->
               <p id="promoCodeLine" class="promo-code-line"></p>
               <p class="reveal-small">
