--- a/client/pages/workout-tracker.html
+++ b/client/pages/workout-tracker.html
@@ -551,7 +551,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
         <span class="separator">|</span>
         <a href="contact-us.html">Contact Us</a>
       </div>
-      <div class="social-icons">
+      <!-- <div class="social-icons">
         <a href="https://www.instagram.com/raising_the_bar_app/?hl=en" target="_blank" aria-label="Instagram">
           <img src="../assets/instagram-icon.png" alt="Instagram">
         </a>
@@ -561,7 +561,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
         <a href="https://www.tiktok.com/@raising_the_bar_app" target="_blank" aria-label="TikTok">
           <img src="../assets/tiktok-icon.png" alt="TikTok">
         </a>
-      </div>
+      </div> -->
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
