--- a/client/pages/payment-success.html
+++ b/client/pages/payment-success.html
@@ -77,7 +77,7 @@
             <h2 class="carousel-title">Workout Summaries</h2>
             <p class="carousel-copy">Instant recaps after every session.</p>
           </article> -->
-          <article class="carousel-slide" aria-hidden="true">
+          <!-- <article class="carousel-slide" aria-hidden="true">
             <img src="../assets/progress-tracking.PNG" width="140" height="140" alt="" loading="lazy" decoding="async"
               aria-hidden="true">
             <h2 class="carousel-title">Progress Tracking</h2>
@@ -88,7 +88,7 @@
               aria-hidden="true">
             <h2 class="carousel-title">Weekly Recaps</h2>
             <p class="carousel-copy">Celebrate wins and refocus fast each week.</p>
-          </article>
+          </article> -->
         </div>
         <!-- <div class="carousel-dots" role="tablist" aria-label="Bonus feature highlights">
           <button class="carousel-dot is-active" type="button" role="tab" aria-label="Adaptive Workout Progression"></button>
@@ -112,7 +112,7 @@
   </div>
   <div id="ctaStopContainer"></div>
 
-  <footer class="footer" id="footer">
+    <footer class="footer" id="footer">
     <div class="footer-content">
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
@@ -166,18 +166,11 @@
       let carouselTimer;
       let isInteracting = false;
       let touchStartX = 0;
-      let dragOffset = 0;
-      let currentOffset = 0;
+      let touchDeltaX = 0;
 
       const applyOffset = () => {
-        const targetSlide = slides[currentIndex];
-        if (!targetSlide) return;
-
-        const offset = targetSlide.offsetLeft;
-        track.scrollLeft = 0;
-        currentOffset = -offset;
-        track.style.setProperty('--carousel-offset', `${currentOffset}px`);
-        track.style.setProperty('--carousel-drag-offset', '0px');
+        const offset = -currentIndex * 100;
+        track.style.setProperty('--carousel-offset', `${offset}%`);
       };
 
       const setSlide = (index) => {
@@ -224,45 +217,31 @@
         if (event.pointerType === 'mouse') return;
         isInteracting = true;
         touchStartX = event.clientX;
-        dragOffset = 0;
+        touchDeltaX = 0;
         stopTimer();
-             track.classList.add('is-dragging');
-        track.style.setProperty('--carousel-drag-offset', '0px');
-        if (typeof track.setPointerCapture === 'function') {
-          track.setPointerCapture(event.pointerId);
-        }
+        track.setPointerCapture(event.pointerId);
       });
 
       track.addEventListener('pointermove', (event) => {
         if (!isInteracting) return;
-        const deltaX = event.clientX - touchStartX;
-        const lastSlide = slides[slides.length - 1];
-        if (!lastSlide) return;
-        const minOffset = -lastSlide.offsetLeft;
-        const maxOffset = 0;
-        const desiredOffset = currentOffset + deltaX;
-        const clampedOffset = Math.min(maxOffset, Math.max(minOffset, desiredOffset));
-        dragOffset = clampedOffset - currentOffset;
-        track.style.setProperty('--carousel-drag-offset', `${dragOffset}px`);
+        touchDeltaX = event.clientX - touchStartX;
       });
 
       const endPointerInteraction = (event) => {
         if (!isInteracting) return;
-        const sensitivity = 30;
-        track.classList.remove('is-dragging');
-        track.style.setProperty('--carousel-drag-offset', '0px');
-        if (dragOffset > sensitivity) {
+        const sensitivity = 40;
+        if (touchDeltaX > sensitivity) {
           setSlide(Math.max(0, currentIndex - 1));
-      } else if (dragOffset < -sensitivity) {
+        } else if (touchDeltaX < -sensitivity) {
           setSlide(Math.min(slides.length - 1, currentIndex + 1));
         } else {
           applyOffset();
         }
         isInteracting = false;
         touchStartX = 0;
-       dragOffset = 0;
+        touchDeltaX = 0;
         startTimer();
-   if (event.pointerId && typeof track.hasPointerCapture === 'function' && track.hasPointerCapture(event.pointerId)) {
+        if (event.pointerId) {
           track.releasePointerCapture(event.pointerId);
         }
       };
@@ -277,9 +256,6 @@
       });
 
       applyOffset();
-      window.addEventListener('resize', () => {
-        window.requestAnimationFrame(applyOffset);
-      });
       startTimer();
 
       if (skipLink) {
