Plan Building TikTok Pixel Event 3

--- a/client/pages/plan-building.html
+++ b/client/pages/plan-building.html
@@ -1,21 +1,24 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <title>Upgrading Your Plan</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="../styles/plan-upgrade.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9CSNHSLQQ"></script>
-      <script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9CSNHSLQQ"></script>
+  <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-W9CSNHSLQQ');
   </script>
-    <script type="text/javascript">
+  <script type="text/javascript">
     (function (c, l, a, r, i, t, y) {
       c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
       t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
@@ -23,19 +26,24 @@
     })(window, document, "clarity", "script", "rmf0p7sik4");
   </script>
   <!-- TikTok Pixel Code Start -->
-<script>
-!function (w, d, t) {
-  w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie","holdConsent","revokeConsent","grantConsent"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(
-var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var r="https://analytics.tiktok.com/i18n/pixel/events.js",o=n&&n.partner;ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=r,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};n=document.createElement("script")
-;n.type="text/javascript",n.async=!0,n.src=r+"?sdkid="+e+"&lib="+t;e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(n,e)};
+  <script>
+    !function (w, d, t) {
+      w.TiktokAnalyticsObject = t; var ttq = w[t] = w[t] || []; ttq.methods = ["page", "track", "identify", "instances", "debug", "on", "off", "once", "ready", "alias", "group", "enableCookie", "disableCookie", "holdConsent", "revokeConsent", "grantConsent"], ttq.setAndDefer = function (t, e) { t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } }; for (var i = 0; i < ttq.methods.length; i++)ttq.setAndDefer(ttq, ttq.methods[i]); ttq.instance = function (t) {
+        for (
+          var e = ttq._i[t] || [], n = 0; n < ttq.methods.length; n++)ttq.setAndDefer(e, ttq.methods[n]); return e
+      }, ttq.load = function (e, n) {
+        var r = "https://analytics.tiktok.com/i18n/pixel/events.js", o = n && n.partner; ttq._i = ttq._i || {}, ttq._i[e] = [], ttq._i[e]._u = r, ttq._t = ttq._t || {}, ttq._t[e] = +new Date, ttq._o = ttq._o || {}, ttq._o[e] = n || {}; n = document.createElement("script")
+          ; n.type = "text/javascript", n.async = !0, n.src = r + "?sdkid=" + e + "&lib=" + t; e = document.getElementsByTagName("script")[0]; e.parentNode.insertBefore(n, e)
+      };
 
 
-  ttq.load('D0M3KORC77UCAFR1EOLG');
-  ttq.page();
-}(window, document, 'ttq');
-</script>
-<!-- TikTok Pixel Code End -->
+      ttq.load('D0M3KORC77UCAFR1EOLG');
+      ttq.page();
+    }(window, document, 'ttq');
+  </script>
+  <!-- TikTok Pixel Code End -->
 </head>
+
 <body>
   <header class="upgrade-header" role="banner">
     <div class="header">
@@ -52,8 +60,10 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       <h1 id="upgrade-title">We&#8217;re building your plan</h1>
       <!-- <p class="message">Hang tight while we finish unlocking your new features.</p> -->
       <div class="progress-section">
-        <p class="progress-label">We’re setting up your plan — it’ll be ready in <span id="upgrade-countdown">5</span> seconds&#8230;</p>
-        <div class="progress-bar" role="progressbar" aria-label="Upgrade progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
+        <p class="progress-label">We’re setting up your plan — it’ll be ready in <span id="upgrade-countdown">5</span>
+          seconds&#8230;</p>
+        <div class="progress-bar" role="progressbar" aria-label="Upgrade progress" aria-valuemin="0" aria-valuemax="100"
+          aria-valuenow="0">
           <span class="progress-fill" id="upgrade-progress" aria-hidden="true"></span>
         </div>
         <p class="progress-hint">Please hang tight, this won’t take long.</p>
@@ -61,6 +71,26 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
       <!-- <a class="dashboard-link" id="upgrade-dashboard-link" href="/pages/dashboard.html">Skip the wait &mdash; take me there now</a> -->
     </section>
   </main>
+
+  <script>
+    const email = localStorage.getItem('email');
+
+    const payload = {
+      value: 0,
+      currency: 'GBP',
+      content_ids: ['rtb-free-trial']
+    };
+
+    if (email) {
+      payload.email = email;
+    }
+
+    // send as a Purchase with £0.00
+    ttq.track('Purchase', payload);
+    // if you prefer:
+    // ttq.track('StartTrial', payload);
+  </script>
+
   <script>
     (function () {
       const params = new URLSearchParams(window.location.search);
@@ -136,4 +166,5 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
     })();
   </script>
 </body>
+
 </html>
