Offer Page AI Incentive Update

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -197,7 +197,7 @@
 
   <div class="whats-included-container">
     <h2 class="wi2-heading">Inside Your Plan</h2>
-    <p class="wi2-description">Everything you need to stay consistent — workouts, meals, and progress that adjust as you
+    <p class="wi2-description">Everything you need to stay consistent — workouts, meals, and progress that adapt as you
       go.</p>
 
     <div class="wi2-content">
@@ -213,11 +213,14 @@
           <h4><span class="tick pt-tick">✔</span> Visible Results in 4 Weeks</h4>
         </div>
         <div class="wi2-item pt-item" data-index="3">
-          <h4><span class="tick pt-tick">✔</span> Progress tracking and analysis</h4>
+          <h4><span class="tick pt-tick">✔</span> AI Meal & Body Scanners</h4>
         </div>
         <div class="wi2-item pt-item" data-index="4">
-          <h4><span class="tick pt-tick">✔</span> Online <br> 1-On-1 Coaching</h4>
+          <h4><span class="tick pt-tick">✔</span> Progress tracking & analysis</h4>
         </div>
+        <!-- <div class="wi2-item pt-item" data-index="5">
+          <h4><span class="tick pt-tick">✔</span> Online <br> 1-On-1 Coaching</h4>
+        </div> -->
         <!-- <div class="wi2-item pt-item" data-index="4">
           <h4><span class="tick pt-tick">✔</span> Flexible Logging</h4>
         </div>
@@ -348,9 +351,10 @@
       Complete Workout Program
     </h2>
     <ul class="workout-benefits">
-      <li>Workouts that adapt based on your performance and feedback</li>
-      <li>Meals that match your routine and fit around your lifestyle</li>
-      <li>1-on-1 online coaching with your assigned coach for expert guidance</li>
+      <li><strong>Workouts that adapt</strong> based on your performance and feedback</li>
+      <li><strong>Meals that match your routine</strong> and fit around your lifestyle</li>
+      <li><strong>AI-powered tools</strong> - the Meal and Body Scanner track and visualize your progress</li>
+      <!-- <li>1-on-1 online coaching with your assigned coach for expert guidance</li> -->
     </ul>
   </div>
 
@@ -437,7 +441,7 @@
       <div class="ps-top">
         <div class="discount-badge">
           <span class="discount-badge__main">100% OFF</span>
-          <span class="discount-badge__bonus">+ Free 1-on-1<br> Coach Call</span>
+          <span class="discount-badge__bonus">+ Free AI Meal Scanner</span>
           <!-- <span class="discount-badge__bonus">+ FREE SHIPPING</span> -->
         </div>
         <h4 class="ps-title">Promo code applied!</h4>
@@ -569,8 +573,8 @@
           <ul class="offer-includes">
             <li>🏋️<Strong> Workouts that adapt</Strong> based on your performance and feedback</li>
             <li>🍽️ <Strong>Meals that match your routine</Strong> and fit around your lifestyle</li>
-            📈 <strong>1-on-1 online coaching</strong> with your assigned coach for expert guidance
-            </li>
+            <li>🤖 <strong>AI-powered tools</strong> - the Meal and Body Scanner track and visualize your progress</li>
+            <!-- <li>📈 <strong>1-on-1 online coaching</strong> with your assigned coach for expert guidance</li> -->
           </ul>
         </div>
 
@@ -1034,7 +1038,7 @@ body: JSON.stringify(payload)
             <div class="reveal-content">
               <div class="discount-badge">
                 <span class="discount-badge__main">100% OFF</span>
-                <span class="discount-badge__bonus">+ Free 1-on-1 Coach Call</span>
+                <span class="discount-badge__bonus">+ Free AI Meal Scanner</span>
               </div>
               <!-- <p class="reveal-sub">Your 12-Week Plan is free!</p> -->
               <p id="promoCodeLine" class="promo-code-line"></p>
