Updated Offer Page Formatting 2

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -653,7 +653,7 @@
       </div>
 
       <p class="final-reassurance" id="offerDisclaimer">
-        Try the 12-Week Plan risk-free. No long-term commitment, no hidden fees.
+        Try the 12-Week Plan risk-free. No commitment, no hidden fees.
       </p>
 
       <p class="offer-disclaimer">
