Updated Offer Page

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -670,7 +670,7 @@ Continue
 Try the 12-Week Plan risk-free. No commitment, no hidden fees.
 </p>
 
-<!-- <p class="offer-disclaimer">
+<p class="offer-disclaimer">
 By continuing, you agree to our
 <a href="tos.html" target="_blank">terms</a> and
 <a href="refund-policy.html" target="_blank">refund policy</a>.
@@ -678,7 +678,7 @@ The 1-day free trial renews every 30 days at
 <span class="renew-amt"></span>/month unless cancelled.
 One-time bonus (£14.99) shown after checkout.
 Cancellations take effect at the end of your 30-day period.
-</p> -->
+</p>
 
 
 </section>
