Removed Friendly Support

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -218,9 +218,9 @@ Other apps just track. <strong>We use what you track to adapt workouts & meals</
         <div class="wi2-item pt-item" data-index="4">
           <h4><span class="tick pt-tick">✔</span> Progress tracking & analysis</h4>
         </div>
-        <div class="wi2-item pt-item" data-index="5">
+        <!-- <div class="wi2-item pt-item" data-index="5">
           <h4><span class="tick pt-tick">✔</span> Friendly Coach Support</h4>
-        </div>
+        </div> -->
         <!-- <div class="wi2-item pt-item" data-index="5">
 <h4><span class="tick pt-tick">✔</span> Online <br> 1-On-1 Coaching</h4>
 </div> -->
