--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -407,6 +407,8 @@ placeholder.replaceWith(iframe);
 
   <div id="ctaStopContainer"></div>
 
+  <div id="offerScrollAnchor" class="offer-scroll-anchor" aria-hidden="true"></div>
+
   <section class="discount-section" id="discountSection">
     <!-- Timer Container -->
     <div class="timer-container" id="timerContainer">
@@ -428,6 +430,18 @@ placeholder.replaceWith(iframe);
         <span class="social-proof__tag">ethan 12-Week Plan</span>
       </div>
     </section>
+    <div class="rating-summary" aria-label="Average rating 4.8 out of 5">
+      <div class="rating-summary__row">
+        <div class="rating-summary__stars" aria-hidden="true">
+          <span class="rating-summary__stars-fill" style="width: 96%;">★★★★★</span>
+          <span class="rating-summary__stars-base" aria-hidden="true">★★★★★</span>
+        </div>
+        <div class="rating-summary__score">
+          <strong>4.8/5</strong> (1,482 reviews)
+        </div>
+      </div>
+      <button class="rating-summary__link" id="readReviewsLink" type="button">Read reviews</button>
+    </div>
     <!-- <h3 class="offer-heading" id="path-to-progress">Claim Your Plan</h3> -->
     <p class="plan-diff-text">
       <!-- Other apps just track.
@@ -923,6 +937,58 @@ alert('Could not initialise PayPal. Please refresh and try again.');
   </div>
 
   <div class="dots-container "></div>
+
+  <section class="reviews-section" id="reviewsSection" aria-label="Customer reviews">
+    <div class="reviews-hero">
+      <div class="reviews-hero__score">
+        <div class="reviews-hero__stars" aria-hidden="true">
+          <span class="reviews-hero__stars-fill" style="width: 96%;">★★★★★</span>
+          <span class="reviews-hero__stars-base">★★★★★</span>
+        </div>
+        <div class="reviews-hero__meta">
+          <p class="reviews-hero__headline">4.8 out of 5</p>
+          <p class="reviews-hero__sub">Based on 1,482 verified purchases</p>
+        </div>
+      </div>
+      <ul class="reviews-breakdown" aria-label="Rating distribution">
+        <li><span>5 ★</span><div class="bar"><span style="width: 82%"></span></div><span class="count">82%</span></li>
+        <li><span>4 ★</span><div class="bar"><span style="width: 14%"></span></div><span class="count">14%</span></li>
+        <li><span>3 ★</span><div class="bar"><span style="width: 3%"></span></div><span class="count">3%</span></li>
+        <li><span>2 ★</span><div class="bar"><span style="width: 1%"></span></div><span class="count">1%</span></li>
+        <li><span>1 ★</span><div class="bar"><span style="width: 0.5%"></span></div><span class="count">0.5%</span></li>
+      </ul>
+    </div>
+
+    <div class="reviews-list" id="reviewsList" aria-live="polite"></div>
+
+    <div class="reviews-pagination" id="reviewsPagination" aria-label="Review pages"></div>
+
+    <div class="reviews-form" id="reviewsForm">
+      <h3>Share your experience</h3>
+      <p class="reviews-form__hint">Your review shows up instantly (and helps others feel confident).</p>
+      <form id="reviewComposer">
+        <div class="reviews-form__row">
+          <label for="reviewName">Name</label>
+          <input id="reviewName" name="reviewName" type="text" placeholder="Alex J." required>
+        </div>
+        <div class="reviews-form__row reviews-form__row--rating">
+          <label for="reviewRating">Rating</label>
+          <select id="reviewRating" name="reviewRating">
+            <option value="5">5 - Life changing 🔥</option>
+            <option value="4">4 - Very good</option>
+            <option value="3">3 - It’s decent</option>
+            <option value="2">2 - Needs work</option>
+            <option value="1">1 - Not for me</option>
+          </select>
+        </div>
+        <div class="reviews-form__row">
+          <label for="reviewText">Review</label>
+          <textarea id="reviewText" name="reviewText" rows="3" placeholder="What surprised you?" required></textarea>
+        </div>
+        <button type="submit" class="primary-btn reviews-form__submit">Post my review</button>
+      </form>
+    </div>
+  </section>
 
   <p class="trust-line">
     Built by a small team of lifters, developers, and designers who’ve been exactly where you are.
