Offer Page Polish 3

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -437,7 +437,7 @@ placeholder.replaceWith(iframe);
           <span class="rating-summary__stars-base" aria-hidden="true">★★★★★</span>
         </div>
         <div class="rating-summary__score">
-          <strong>4.8/5</strong> (253,957 reviews)
+          <strong>4.8/5</strong> (312,143 reviews)
         </div>
       </div>
       <button class="rating-summary__link" id="readReviewsLink" type="button">Read reviews</button>
@@ -947,7 +947,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
         </div>
         <div class="reviews-hero__meta">
           <p class="reviews-hero__headline">4.8 out of 5</p>
-          <p class="reviews-hero__sub">Based on 1,482 verified purchases</p>
+          <p class="reviews-hero__sub">Based on 312,143 reviews verified purchases</p>
         </div>
       </div>
       <ul class="reviews-breakdown" aria-label="Rating distribution">
